...
class FetchViewController: UIViewController {
    @IBOutlet weak var numberField: UILabel!
    @IBOutlet weak var statusLabel: UILabel!
   
    @IBAction func fetchButton(_ sender: Any) {
       startAndDisableView()
       statusLabel.text = "Fetching Lucky Numbers"
       numberField.text = " "
        
        DispatchQueue.global(qos: .background).async{
            for _ in 0..<6{
                let currentNumber = String(arc4random() % 10)
                self.updateNumberField(input: currentNumber)
...
        
        DispatchQueue.main.async {
            self.activityIndicator.stopAnimating()
            self.view.isUserInteractionEnabled = true
            self.activityIndicator.isHidden = true
            self.view.alpha = 1
            self.statusLabel.text = "View is Now Active"
        }
        
        }
    
    func startAndDisableView(){
        DispatchQueue.main.async {
...
